fix title animation in Dark mode

--- a/src/styles/header.module.scss
+++ b/src/styles/header.module.scss
@@ -3,11 +3,12 @@
 .siteheader {
   display: flex;
   justify-content: center;
+  margin-top: 10px;
   padding: 1rem 0;
   font-weight: 400;
-  color: #000;
-  background: rgba(255,255,255, 0.1);
-  border: 3px solid rgba(255, 255, 255, 0.1);
+  color: var(--fg);
+  background: var(--bg);
+  border: 3px solid var(--bg);
   border-radius: 5px;
   transition: .4s;
   
